--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack-dev-server --config ./webpack.dev.config.js --mode development",
-    "build": "webpack "
+    "build": "webpack --config ./webpack.dev.config.js --mode development"
   },
   "keywords": [
     "utils"
