--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "lib/utils.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --config ./webpack.dev.config.js --mode development",
-    "build": "webpack --config ./webpack.dev.config.js --mode development"
+    "dev": "webpack-dev-server --config ./webpack.config.js --mode development",
+    "build": "webpack --config ./webpack.config.js --mode development"
   },
   "keywords": [
     "utils"
@@ -23,5 +23,9 @@
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/OVYVO/yan-utils.git"
   }
 }
