--- a/package.json
+++ b/package.json
@@ -2,16 +2,20 @@
   "name": "yan-utils",
   "version": "1.0.0",
   "description": "yan's utils",
-  "main": "lib/utils.js",
+  "main": "dist/bundle.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack-dev-server --config ./webpack.config.js --mode development",
     "build": "webpack --config ./webpack.config.js --mode development"
   },
   "keywords": [
-    "utils"
+    "yan-utils"
   ],
-  "author": "yangang",
+  "files": [
+    "dist",
+    "src"
+  ],
+  "author": "vue12306@163.com",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.26.3",
