--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/OVYVO/yan-utils.git"
+  },
+  "bugs":{
+    "url":"https://github.com/OVYVO/yan-utils/issues"
   }
 }
