--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-latest": "^6.24.1",
+    "clean-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^4.5.0",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
@@ -32,7 +33,7 @@
     "type": "git",
     "url": "https://github.com/OVYVO/yan-utils.git"
   },
-  "bugs":{
-    "url":"https://github.com/OVYVO/yan-utils/issues"
+  "bugs": {
+    "url": "https://github.com/OVYVO/yan-utils/issues"
   }
 }
