--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "yan-utils",
-  "version": "1.0.2",
+  "version": "1.0.1",
   "description": "yan's utils",
   "main": "dist/bundle.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --config ./webpack.config.js --mode development",
-    "build": "webpack --config ./webpack.config.js --mode production"
+    "dev": "webpack-dev-server --config build/webpack.config.js",
+    "build": "webpack --config build/webpack.config.js"
   },
   "keywords": [
     "yan-utils"
