--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,6 @@
 {
-    "presets": ["@babel/preset-env"],
-    "plugins":[]
+    "presets": [["@babel/preset-env",{"modules": "commonjs","useBuiltIns": "usage"}]],
+    "plugins":[
+      ["@babel/plugin-transform-runtime",{"corejs": 3}]
+    ]
 }
