--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "yan-utils",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "yan's utils",
-  "main": "lib",
+  "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack-dev-server --config webpack.config.js",
@@ -19,7 +19,9 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.12.0",
+    "@babel/plugin-transform-runtime": "^7.12.0",
     "@babel/preset-env": "^7.12.0",
+    "@babel/runtime-corejs3": "^7.12.0",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^4.5.0",
