--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
-    "presets": [["@babel/preset-env",{"modules": "commonjs","corejs": "3","useBuiltIns": "usage"}]],
+    "presets": [["@babel/preset-env",{"modules": "commonjs","corejs": 3,"useBuiltIns": "usage"}]],
     "plugins":[
-      ["@babel/plugin-transform-runtime",{"corejs": 3}]
+      ["@babel/plugin-transform-runtime",{"corejs": 3}],
+      ["@babel/plugin-proposal-class-properties", { "loose": false }]
     ]
 }
