--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.12.0",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/plugin-transform-runtime": "^7.12.0",
+    "@babel/runtime-corejs3": "^7.12.1",
     "@babel/preset-env": "^7.12.0",
-    "@babel/runtime-corejs3": "^7.12.0",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^4.5.0",
