--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
   "name": "yan-utils",
   "version": "1.0.6",
   "description": "yan's utils",
+  "type": "module",
   "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rollup -c"
+    "build": "rimraf lib && rollup -c"
   },
   "keywords": [
     "yan-utils"
   ],
   "files": [
-    "lib",
-    "src"
+    "lib"
   ],
   "author": "vue12306@163.com",
   "license": "ISC",
@@ -27,6 +27,7 @@
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
     "@types/node": "^20.12.11",
+    "glob": "^10.3.15",
     "rollup": "^4.17.2",
     "tsc-alias": "^1.8.9",
     "tslib": "^2.6.2"
