--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "slink": "pnpm link --global",
+    "sunlink": "pnpm uninstall yan-utils --global",
     "build:test": "rimraf lib && rollup -c",
     "build": "rollup -c"
   },
