:sparkles: feat: 新增waterMark函数，优化打包流程及产物输出

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "target": "es5",
     "allowJs": true,
     "baseUrl": ".",
+    "rootDir": "src",
     "paths": {
       "@/*": ["src/*"],
       "tslib": ["node_modules/tslib/tslib.d.ts"]
