--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "strictNullChecks": true,
     "strictPropertyInitialization": true,
     "noImplicitAny": false,
+    "lib": ["es5", "es6", "dom"],
     "target": "es5",
     "allowJs": true,
     "baseUrl": ".",
